--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "module": "src/index.ts",
   "type": "module",
   "devDependencies": {
-    "@types/bun": "latest"
+    "@types/bun": "latest",
+    "bun-types": "^1.3.2"
   },
   "peerDependencies": {
     "typescript": "^5"
