--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,29 +1,38 @@
 {
   "compilerOptions": {
-    // Environment setup & latest features
-    "lib": ["ESNext", "DOM"],
+    /* === Modern Environment === */
     "target": "ESNext",
-    "module": "Preserve",
-    "moduleDetection": "force",
-    "jsx": "react-jsx",
-    "allowJs": true,
+    "module": "ESNext",
+    "lib": ["ESNext"],
 
-    // Bundler mode
-    "moduleResolution": "bundler",
-    "allowImportingTsExtensions": true,
+    /* === Emit Settings === */
+    "outDir": "dist",
+    "declaration": true,
+    "declarationMap": false,
+    "emitDeclarationOnly": false,
+    "sourceMap": false,
+
+    /* === Module Resolution === */
+    "moduleResolution": "Bundler",
     "verbatimModuleSyntax": true,
-    "noEmit": true,
+    "resolveJsonModule": true,
+    "esModuleInterop": true,
 
-    // Best practices
+    /* === Quality & Safety === */
     "strict": true,
     "skipLibCheck": true,
+    "noImplicitAny": true,
     "noFallthroughCasesInSwitch": true,
     "noUncheckedIndexedAccess": true,
     "noImplicitOverride": true,
 
-    // Some stricter flags (disabled by default)
-    "noUnusedLocals": false,
-    "noUnusedParameters": false,
-    "noPropertyAccessFromIndexSignature": false
-  }
+    /* === JSX (unused, but safe) === */
+    "jsx": "react-jsx",
+
+    /* === Others === */
+    "allowJs": false,
+    "noEmitOnError": true,
+  },
+  "include": ["src"],
+  "exclude": ["dist", "node_modules", "**/*.test.ts"]
 }
