--- a/package.json
+++ b/package.json
@@ -14,6 +14,10 @@
     "build": "bun run clean && tsc",
     "test": "bun test"
   },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/abdulrafay-07/ryu.git"
+  },
   "devDependencies": {
     "@types/bun": "latest",
     "bun-types": "^1.3.2",
